Fix grid overflowing at certain dimensions

--- a/style.css
+++ b/style.css
@@ -20,6 +20,4 @@ body{
 .grid {
     border: 1px solid #bbb;
     box-sizing: border-box;
-    min-height: 0;
-    overflow: hidden;
 }
